force-app/main/default/objects/SQX_Team_Members__c/SQX_Team_Members__c.object-meta.xml
<CustomObject>
    <description>The team member object will be used to store team members of other objects as well like
Contacts and Cases.</description>
    <label>Team Member</label>
    <nameField>
        <label>Team Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Team Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>