force-app/main/default/objects/SQX_Team_Members__c/fields/Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>Contact_Info__c</fullName>
    <description>Team member contact info</description>
    <label>Contact Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>